# 1_Ankle_exo_torque_profile

./: CMakeLists.txt
externalPC_wirelessUDP_bilateral_transfer/wireless_bilateral_transfer_mac/: session.csv
externalPC_wirelessUDP_bilateral_transfer/wireless_bilateral_transfer_mac/Tests/: GUI_udp_bidir_mac.py  udp_bidir_mac.py
externalPC_wirelessUDP_bilateral_transfer/wireless_bilateral_transfer_mac/UDP_torque_profile_GUI/: UDP_torque_profile.py
src/: main.cpp
